<resources>
    <string name="app_name">FamgyJetpack</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="login_phone_input_number_hint">输入手机号</string>
    <string name="login_phone_input_password_hint">6-16位数字和字母组合</string>
    <string name="login_sure">登录</string>
    <string name="next">下一步</string>
    <string name="registration_nickname">昵称</string>
    <string name="registration_nickname_hint">输入昵称</string>

    <string name="menu_filter_by_grow_zone">按生长区筛选</string>
    <string name="plant_detail_image_content_description">植物图片</string>
    <string name="my_garden_title">我的花园</string>
    <string name="plant_list_title">植物目录</string>
    <string name="available">植物品种</string>
    <string name="plant_details_title">植物介绍</string>
    <string name="add_plant">添加植物</string>
    <string name="added_plant_to_garden">添加了新植物</string>
    <string name="garden_empty">花园里还没有植物</string>
    <string name="plant_date_header">种下日期</string>
    <string name="watered_date_header">最后浇水</string>
    <string name="menu_item_share_plant">分享</string>
    <string name="share_text_plant">在安卓 Sunflower APP 上看看这 %s</string>

    <!-- String plurals and their related prefix / suffix strings -->
    <!-- Item quantities for zero and one are not used in Chinese -->
    <string name="watering_needs_prefix">浇水指南</string>
    <plurals name="watering_needs_suffix">
        <item quantity="other">每隔 %d 天</item>
    </plurals>

    <plurals name="watering_next">
        <item quantity="other">%d 天后浇水</item>
    </plurals>

    <!-- Accessibility -->
    <string name="a11y_plant_item_image">植物图片</string>

    <!-- Music -->
    <string name="song_list_title">我的音乐</string>
</resources>
