<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.famgy.famgyjetpack.viewmodels.model.LoginViewModel" />
    </data>

    <RelativeLayout
        android:background="@drawable/bg_star"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <ImageView
            android:id="@+id/iv_profile_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip"
            android:src="@mipmap/splash_1"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_below="@+id/iv_profile_logo"
            android:orientation="vertical"
            android:layout_marginTop="40.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_gravity="center_vertical"
                android:paddingLeft="40.0dip"
                android:paddingRight="40.0dip"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip">
                <TextView
                    android:textSize="13.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_white"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:text="@string/registration_nickname"
                    android:drawablePadding="4.0dip"/>
                <EditText
                    android:id="@+id/et_nickname"
                    android:textSize="13.0sp"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_gray"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:layout_marginLeft="64.0dip"
                    android:hint="@string/registration_nickname_hint"
                    android:onTextChanged="@{(text, start, before, count)->model.onAccountChanged(text)}"
                    android:maxLength="10" />
                <View
                    android:background="@color/color_gray"
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_profile_next"
                android:alpha="0.5"
                android:clickable="false"
                android:textSize="17.0sp"
                android:textColor="@color/color_white"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.0dip"
                android:layout_marginTop="16.0dip"
                android:layout_marginRight="40.0dip"
                android:text="@string/next" />
        </LinearLayout>


    </RelativeLayout>


</layout>


