<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="model" type="com.famgy.famgyjetpack.viewmodels.model.LoginViewModel" />
    </data>

    <RelativeLayout
        android:background="@drawable/bg_star"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <com.famgy.famgyjetpack.ui.views.CoolBackgroundView
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            app:sbv_drawable="@drawable/bg_login"
            app:sbv_scrollX="0dip"
            app:sbv_scrollY="0dip" />
        <View android:background="#45000000"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40.0dip"
            android:src="@mipmap/splash_1"
            android:layout_centerHorizontal="true" />

        <LinearLayout
            android:layout_below="@+id/iv_logo"
            android:orientation="vertical"
            android:layout_marginTop="40.0dip"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent">

            <RelativeLayout
                android:layout_gravity="center_vertical"
                android:paddingLeft="40.0dip"
                android:paddingRight="40.0dip"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip">
                <TextView
                    android:textSize="13.0sp"
                    android:textStyle="bold"
                    android:textColor="@color/color_white"
                    android:gravity="center"
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:text="+86"
                    android:drawablePadding="4.0dip"/>
                <EditText
                    android:textSize="13.0sp"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_gray"
                    android:gravity="center_vertical"
                    android:id="@+id/et_username"
                    android:background="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:layout_marginLeft="64.0dip"
                    android:hint="@string/login_phone_input_number_hint"
                    android:onTextChanged="@{(text, start, before, count)->model.onAccountChanged(text)}"
                    android:maxLength="11"
                    android:inputType="phone"/>
                <View
                    android:background="@color/color_gray"
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <RelativeLayout
                android:gravity="center_vertical"
                android:paddingLeft="40.0dip"
                android:paddingRight="40.0dip"
                android:layout_width="fill_parent"
                android:layout_height="45.0dip"
                android:layout_marginTop="35.0dip">
                <TextView
                    android:textSize="13.0sp"
                    android:textColor="@color/color_white"
                    android:textStyle="bold"
                    android:gravity="center"
                    android:id="@+id/password_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:text="密码" />
                <EditText
                    android:id="@+id/et_password"
                    android:textSize="13.0sp"
                    android:textColor="@color/color_white"
                    android:textColorHint="@color/color_gray"
                    android:maxLength="16"
                    android:gravity="center_vertical"
                    android:background="@null"
                    android:layout_width="fill_parent"
                    android:layout_height="45.0dip"
                    android:layout_marginLeft="64.0dip"
                    android:hint="@string/login_phone_input_password_hint"
                    android:onTextChanged="@{(text, start, before, count)->model.onPasswordChanged(text)}"
                    android:inputType="textPassword" />
                <ImageButton
                    android:id="@+id/ib_password_change"
                    android:background="@null"
                    android:paddingLeft="25.0dip"
                    android:layout_width="wrap_content"
                    android:layout_height="45.0dip"
                    android:src="@drawable/ic_password_hide"
                    android:layout_alignParentRight="true" />
                <View
                    android:background="@color/color_gray"
                    android:layout_width="fill_parent"
                    android:layout_height="0.5dip"
                    android:layout_alignParentBottom="true" />
            </RelativeLayout>
            <Button
                android:id="@+id/btn_sure"
                android:textSize="17.0sp"
                android:textColor="@color/color_white"
                android:background="@drawable/button_custom"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40.0dip"
                android:layout_marginTop="16.0dip"
                android:layout_marginRight="40.0dip"
                android:text="@string/login_sure"
                android:onClick="@{() -> model.authenticate()}" />
            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:textSize="13.0sp"
                    android:textColor="@color/color_gray"
                    android:id="@+id/tv_findpsd"
                    android:background="@null"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20.0dip"
                    android:layout_marginRight="40.0dip"
                    android:text="忘记密码"
                    android:layout_alignParentRight="true" />
            </RelativeLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_third_login"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="37.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="35.0dip"
            android:layout_alignParentLeft="true"
            android:layout_alignParentBottom="true">
            <ImageView
                android:id="@+id/iv_wechat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/icon_login_wechat" />
            <ImageView
                android:id="@+id/iv_qq"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25.0dip"
                android:src="@mipmap/icon_login_qq" />
            <View
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_weight="1.0" />
            <TextView
                android:id="@+id/tv_register"
                android:textSize="13.0sp"
                android:textColor="#ffc7c7d7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="40.0dip"
                android:text="注册" />
        </LinearLayout>

    </RelativeLayout>

</layout>


